# C-hat

./: CMakeLists.txt  README.md  aMeL.ipynb  main.c  socket.c  socket.h
client/: Client.c  Client.h
log/: Logger.c  Logger.h
message manager/: Message Manager.c  Message Manager.h
room/: Room.c  Room.h
salon/: Salon.c  Salon.h
socket/: Socket.c  Socket.h
sockets/Adress-Ports/: bindAdressPort.c  bindAdressPort.h
sockets/Parameters/: bindParam.c  bindParam.h
sockets/connexion/: connexion.c  connexion.h
sockets/creation/: creation.c  creation.h
sockets/listening/: listening.c  listening.h
sockets/old/: socket.c  socket.h
